TODO: can sth. be done about "double-wide character on last row"
TODO: do font request caching, might help rxvtd on some machines
TODO: safer command: keymap processing.
TODO: "slow" rendering mode for bidi and scripts
TODO: read property sequence is broken with respect to utf-8 etc.
WISH: keyboard modification via esc-sequences.
WISH: line-rewrapping on resize
WISH: searchable backlog
WISH: meta-tagging of data by regex (my dream project)
WISH: double-click: more intelligent (urls etc.)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: tabbed windows (hey, just use screen...)
WISH: just for fun, do shade and tint with XRender.

5.6
        - R_SB_RXVT bitset value was 0, so rxvt scrollbar was initialised
          every time resulting in display errors (original rxvt also affected).
          Reported by Jasmin Buchert.
        - font names are now considered to be utf-8 encoded (xft apperently
          uses this convention. X Core fonts might not, but it should be rare).
          Affects display in iso14755 box.
        - rewrote the low-level xft drawing function ("xft backend" for the
          hipper parts of the world) to hopefully cope better with proportional
          chars mixed with fixed-width ones.
        - rxvt is now much more careful (read: slower) with potentially
          overlapping xft characters. It usually overshoots and redraws
          more than required, but that's better than undershooting and
          cutting pieces off of characters.
        - rxvt is now more restrictive in what font heights it accepts for
          fonts that will likely overshoot or underhsoot lines.
        - fix a cosmetic problem with the unfocused cursor on a wide character
          at the end of the line (reported by Mikachu).

5.5  Sat Apr 23 22:31:36 CEST 2005
	- re-enabled modifer state matching as in 5.3, but implement
          a new builtin: keysym style that simply reverts to the built-in
          meaning of the given key.