@@ -1,4 +1,3 @@
-TODO: can sth. be done about "double-wide character on last row"
 TODO: do font request caching, might help rxvtd on some machines
 TODO: safer command: keymap processing.
 TODO: "slow" rendering mode for bidi and scripts
@@ -30,6 +29,8 @@ WISH: just for fun, do shade and tint with XRender.
           fonts that will likely overshoot or underhsoot lines.
         - fix a cosmetic problem with the unfocused cursor on a wide character
           at the end of the line (reported by Mikachu).
+        - wide characters not fitting into the end of the line will be
+          output in the next line if they (reported by Mikachu).
 
 5.5  Sat Apr 23 22:31:36 CEST 2005
 	- re-enabled modifer state matching as in 5.3, but implement
